# Multibotnet

./: CMakeLists.txt  README.md  package.xml
Scripts/: debug_test.sh  server_test.py  service_diagnostic.py  test_v4_final.sh  topic_test.py  zmq_diagnostic.py  zmq_req_rep_test.py
config/: default.yaml  local_test.yaml  osconsole_debug.conf  rosconsole.conf  test_local.yaml  test_simple.yaml
include/multibotnet/: ros_sub_pub.hpp  service_manager.hpp  zmq_manager.hpp
include/multibotnet/core/: message_factory.hpp  service_factory.hpp  types.hpp
include/multibotnet/managers/: service_bridge.hpp  service_manager.hpp  topic_manager.hpp
include/multibotnet/transport/: compression.hpp  connection_pool.hpp  zmq_transport.hpp
include/multibotnet/utils/: config_parser.hpp  logger.hpp  thread_pool.hpp
launch/: multibotnet.launch  test_local.launch  test_local_debug.launch
src/: main.cpp  main_service.cpp  main_topic.cpp  service_manager.cpp  zmq_manager.cpp
src/core/: message_factory.cpp  service_factory.cpp
src/examples/: dynamic_service_example.cpp
src/managers/: service_manager.cpp  topic_manager.cpp
src/nodes/: service_node.cpp  topic_node.cpp
src/transport/: compression.cpp  connection_pool.cpp  zmq_transport.cpp
src/utils/: config_parser.cpp  logger.cpp  thread_pool.cpp
